--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#225fb2</color>
     <color name="colorPrimaryDark">#225fb2</color>
-    <color name="colorAccent">#b20000</color>
+    <color name="colorAccent">#ffffff</color>
     <color name="light_black">#504f4f</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
